# nRF54L15-minimalist-BLE-sniffer-Zephyr

./: .gitignore  CMakeLists.txt  Kconfig.sysbuild  README.md  VERSION  prj.conf  scan_adv_1.code-workspace  sysbuild.conf
src/: BT_sniffer.c  BT_sniffer.h  main.c
