##::: ##:'########::'########:'########:'##::::::::::::BT_sniffer.c::::::::::::::::::::::::*/
###:: ##: ##.... ##: ##.....:: ##.....:: ##:::'##::::::::::::::::::::::::::::::::::::::::::*/
####: ##: ##:::: ##: ##::::::: ##::::::: ##::: ##::::::Author: a6a9aiaj::::::::::::::::::::*/
## ## ##: ########:: ######::: #######:: ##::: ##::::::<a5a8ahaiac@proton.me>::::::::::::::*/
##. ####: ##.. ##::: ##...::::...... ##: #########:::::::::::::::::::::::::::::::::::::::::*/
##:. ###: ##::. ##:: ##:::::::'##::: ##:...... ##::::::Created: 2025/07/14 by a6a9aiaj:::::*/
##::. ##: ##:::. ##: ##:::::::. ######:::::::: ##::::::Updated: 2025/07/15 by a6a9aiaj:::::*/
########::'########:::::'######::'##::: ##:'####:'########:'########:'########:'########:::*/
##.... ##:... ##..:::::'##... ##: ###:: ##:. ##:: ##.....:: ##.....:: ##.....:: ##.... ##::*/
##:::: ##:::: ##::::::: ##:::..:: ####: ##:: ##:: ##::::::: ##::::::: ##::::::: ##:::: ##::*/
########::::: ##:::::::. ######:: ## ## ##:: ##:: ######::: ######::: ######::: ########:::*/
##.... ##:::: ##::::::::..... ##: ##. ####:: ##:: ##...:::: ##...:::: ##...:::: ##.. ##::::*/
##:::: ##:::: ##:::::::'##::: ##: ##:. ###:: ##:: ##::::::: ##::::::: ##::::::: ##::. ##:::*/
########::::: ##:::::::. ######:: ##::. ##:'####: ##::::::: ##::::::: ########: ##:::. ##::*/

cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(detector)

target_sources(app PRIVATE
  src/main.c
  src/BT_sniffer.c
)
zephyr_library_include_directories(${ZEPHYR_BASE}/samples/bluetooth)
